[gd_scene load_steps=16 format=3 uid="uid://3higeki8udsa"]

[ext_resource type="Script" uid="uid://dcjv1chnyxs37" path="res://scripts/player.gd" id="1_smehm"]
[ext_resource type="PackedScene" uid="uid://ccc3gjo600wnd" path="res://scenes/Components/HealthComponent.tscn" id="2_tuyoq"]
[ext_resource type="PackedScene" uid="uid://ba2comoj2jbjy" path="res://scenes/playerHud.tscn" id="2_ur7pv"]
[ext_resource type="Script" uid="uid://chstbdoytej6f" path="res://scripts/inventory.gd" id="2_y4r1p"]
[ext_resource type="PackedScene" uid="uid://c8xwid8c3180v" path="res://scenes/Components/HitboxComponent.tscn" id="3_fjrip"]
[ext_resource type="PackedScene" uid="uid://rprte4yhjl7p" path="res://scenes/items/wallPlacer.tscn" id="3_ur7pv"]
[ext_resource type="PackedScene" uid="uid://hml8qyu1fbw4" path="res://scenes/items/weapon.tscn" id="4_tuyoq"]
[ext_resource type="PackedScene" uid="uid://odsgtbc0vey0" path="res://scenes/items/example_item.tscn" id="4_y4r1p"]
[ext_resource type="Script" uid="uid://b1oc161a3c6uo" path="res://scripts/playerSprite.gd" id="6_fjrip"]
[ext_resource type="Texture2D" uid="uid://b0beevi77dsmn" path="res://textures/gun.svg" id="7_3v2ag"]
[ext_resource type="Texture2D" uid="uid://bs3hgkqylvrf7" path="res://textures/Player Skins/balls/balls generic.svg" id="7_ur7pv"]
[ext_resource type="Texture2D" uid="uid://c6bvhyawqa7ck" path="res://textures/Player Skins/hands/hands generic.svg" id="9_y4r1p"]
[ext_resource type="Texture2D" uid="uid://da2bhtdfgh6i7" path="res://textures/random textures/blueprintbase_512-893892667.png" id="11_jej6c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1xral"]
radius = 54.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_tuyoq"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CollisionBox2D:scale")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Sprite2D:self_modulate")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Sprite2D/hand1:self_modulate")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Sprite2D/hand2:self_modulate")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:pushVel")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:inputVel")
properties/7/spawn = true
properties/7/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_smehm")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_ur7pv")
script = ExtResource("6_fjrip")

[node name="hand1" type="Sprite2D" parent="Sprite2D"]
z_index = -1
position = Vector2(-99, -128)
scale = Vector2(0.75, 0.75)
texture = ExtResource("9_y4r1p")

[node name="hand2" type="Sprite2D" parent="Sprite2D"]
z_index = -1
position = Vector2(99, -128)
scale = Vector2(0.75, 0.75)
texture = ExtResource("9_y4r1p")

[node name="HUD" parent="." instance=ExtResource("2_ur7pv")]
visible = false

[node name="Inventory" type="Node2D" parent="."]
position = Vector2(80, 0)
script = ExtResource("2_y4r1p")

[node name="slot0" type="Node2D" parent="Inventory"]

[node name="Weapon" parent="Inventory/slot0" instance=ExtResource("4_tuyoq")]
visible = false
texture = ExtResource("7_3v2ag")

[node name="slot1" type="Node2D" parent="Inventory"]

[node name="exampleItem" parent="Inventory/slot1" instance=ExtResource("4_y4r1p")]
visible = false

[node name="slot2" type="Node2D" parent="Inventory"]

[node name="wallPlacer" parent="Inventory/slot2" instance=ExtResource("3_ur7pv")]
visible = false
texture = ExtResource("11_jej6c")

[node name="slot3" type="Node2D" parent="Inventory"]

[node name="slot4" type="Node2D" parent="Inventory"]

[node name="HealthComponent" parent="." instance=ExtResource("2_tuyoq")]
maxHealth = 100

[node name="HitboxComponent" parent="." instance=ExtResource("3_fjrip")]

[node name="CollisionBox2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_1xral")

[node name="CollisionBox2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1xral")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_tuyoq")
